# pigeon-shot

./: AGENTS.md  Cargo.toml  README.md  install.sh  pigeonshot.desktop
src/: main.rs  tests.rs
